kubernetes/apps/default/emqx/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: emqx.png
    gethomepage.dev/name: Emqx
    gethomepage.dev/group: Automation
    gethomepage.dev/pod-selector: apps.emqx.io/instance=emqx
    gatus.home-operations.com/endpoint: |
      conditions:
        - "[STATUS] == 200"
spec:
  hostnames: ["emqx.chestr.dev"]
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: emqx-dashboard
          namespace: default
          port: 18083
