kubernetes/apps/default/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.chestr.dev
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: emqx.png
    gethomepage.dev/name: Emqx
    gethomepage.dev/group: Automation
spec:
  ingressClassName: internal
  rules:
    - host: emqx.chestr.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
